--- a/HtmlWebpackPlugin webpack/package.json
+++ b/HtmlWebpackPlugin webpack/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/runtime": "^7.4.4",
     "autoprefixer": "^9.4.10",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
@@ -23,6 +24,7 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^7.0.0",
     "imagemin-svgo": "^7.0.0",
+    "jquery": "^3.4.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack-cli": "^3.2.3",
@@ -44,6 +46,7 @@
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0"
   },
