--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.4.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "user": "0.0.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
